<resources>
    <string name="app_name">원더풀키즈 : 유치원 출결관리</string>
    <string name="add">추가</string>
    <string name="app_name_short">원더풀 키즈</string>
    <string name="login_title">로그인</string>
    <string name="logout">로그아웃</string>
    <string name="register_title">사용자 등록</string>
    <string name="join_user">회원가입</string>
    <string name="find_title">비밀번호 찾기</string>
    <string name="forgot_password">비밀번호 찾기</string>
    <string name="login_button">로그인</string>
    <string name="register_button">가입하기</string>
    <string name="error_void">이 칸을 입력하세요.</string>
    <string name="error_email">올바른 이메일을 입력하세요.</string>
    <string name="error_password_comfirm">비밀번호가 맞지 않습니다.</string>
    <string name="error_password_length">영문 또는 숫자 6자 이상 입력하세요.</string>
    <string name="yes">네</string>
    <string name="no">아니요</string>

    <string name="error_formFill2">필수 칸을 먼저 입력해주세요.</string>
    <string name="error_formFill">사진과 필수 정보를 입력해주세요.</string>
    <string name="error_userPic">삭제 후 다시 등록해주세요.</string>
    <string name="error_registration">양식에 맞게 작성해주세요.</string>
    <string name="error_cvid">얼굴인식에 실패했습니다. 다시 등록해주세요.</string>
    <string name="error_permission">권한을 설정하셔야 이용하실 수 있습니다.</string>
    <string name="reset_success">초기화 요청 url을 메일로 보냈습니다. 메일을 확인해주세요.</string>
    <string name="deleted_student">삭제된 원생</string>
    <string name="deleted_student_toast">삭제된 원생입니다.</string>

    <string name="write_email">이메일 주소를 입력해주세요.</string>
    <string name="write_pwd">비밀번호를 입력해주세요.</string>
    <string name="write_pwd_again">비밀번호를 한번 더 입력해주세요.</string>
    <string name="write_kindergarten">유치원 이름을 입력해주세요.</string>
    <string name="wanna_send_sms">&#160;보호자님에게 문자를 보내시겠습니까?</string>


    <string name="wanna_logout">로그아웃하시겠습니까?</string>

    <string name="update_info_done">정보를 변경 했습니다.</string>
    <string name="edit_kindergarten">유치원 정보 수정</string>
    <string name="changeNM_done">유치원 이름을 변경하였습니다.</string>
    <string name="done_add_class">새로운 반을 추가하였습니다.</string>
    <string name="add_class">추가하실 반 이름을 적어주세요.</string>
    <string name="modify_class">변경하실 새로운 반 이름을 적어주세요.</string>
    <string name="delete_class">을 삭제하시겠습니까?</string>
    <string name="add_class_short">반 추가하기</string>
    <string name="dialog_change_name">새로운 유치원 이름을 적어주세요.</string>
    <string name="delete_sutudent">원생 정보를 삭제하시겠습니까?</string>

    <string name="success_registeration">성공적으로 가입하였습니다.</string>
    <string name="finding_email">가입하신 이메일 주소를 입력하시면 해당 계정으로 비밀번호 재설정 링크를 보내드립니다.</string>
    <string name="success_find_password">비밀번호를 전송하였습니다. 메일을 확인해주세요.</string>
    <string name="list_attendance">출석부</string>
    <string name="no_camera_permission">퍼미션을 받지 못했으므로 종료하겠습니다.</string>
    <string name="message_to_parents">&#160;보호자님 안녕하세요.</string>
    <string name="call_to_parent">&#160;보호자님에게 전화 거시겠습니까?</string>
    <string name="done_chageClass">반 이름을 변경하였습니다. </string>
    <string name="done_delete_class">반을 삭제하였습니다.</string>

    <string name="parents_email">보호자 이메일</string>
    <string name="parents_email_opt">보호자 이메일 (옵션)</string>
    <string name="parents_tel_needed">보호자 휴대폰 번호 (필수)</string>
    <string name="parents_tel">보호자 휴대폰 번호</string>
    <string name="student_name">원생 이름</string>
    <string name="student_name_needed">원생 이름 (필수)</string>

    <string name="list_students">원생 목록</string>
    <string name="total_students">등록된 원생 총 </string>


    <string name="setting_come_time">등원 시간 설정</string>
    <string name="setting_go_time">하원 시간 설정</string>


    <string name="success_change_time">시간 변경 성공</string>
    <string name="fail_change_name">시간 변경 실패</string>
    <string name="success_login">로그인 성공</string>
    <string name="fail_login">로그인 실패</string>
    <string name="success_join">회원가입 성공</string>
    <string name="fail_join">회원가입 실패</string>
    <string name="register_fail">등록 실패</string>
    <string name="register_success">등록 완료</string>
    <string name="delete_fail">삭제 실패</string>
    <string name="delete_success">삭제 성공</string>

    <string name="ok">확인</string>
    <string name="call">걸기</string>
    <string name="cancel">취소</string>
    <string name="change">변경</string>
    <string name="delete">삭제</string>
    <string name="setting">설정</string>
    <string name="none">없음</string>
    <string name="hour">시</string>
    <string name="min">분</string>
    <string name="unit_people">명</string>
    <string name="children">어린이</string>
    <string name="basic_kindergarten">원더풀 유치원</string>
    <string name="camera_loading">등록 중 입니다. 잠시만 기다려주세요.</string>
    <string name="camera_error">카메라 사용불가</string>
    <string name="take_again">다시 찍으세요.</string>
    <string name="no_more">더이상 불러올 목록이 없습니다.</string>
    <string name="loading">로딩 중입니다.</string>


    <string name="info_student">원생정보</string>
    <string name="calendar_item_new_count">%d명</string>
    <string name="pulldown_refreshing">새로고침 중</string>
    <string name="today">오늘</string>
    <string-array name="week">
        <item>일요일</item>
        <item>월요일</item>
        <item>화요일</item>
        <item>수요일</item>
        <item>목요일</item>
        <item>금요일</item>
        <item>토요일</item>
    </string-array>
</resources>
