<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.onethefull.attendmobile.LoginActivity"
    android:background="@drawable/bg1"
    android:id="@+id/bg_login"
    >


    <ImageView
        android:id="@+id/logo_login"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/bi2" />


        <LinearLayout
            android:layout_below="@+id/logo_login"
            android:layout_marginTop="28dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal"
                android:paddingEnd="30dp"
                android:paddingStart="30dp">

                <android.support.design.widget.TextInputLayout
                    android:gravity="center"
                    app:hintEnabled="false"
                    app:boxCornerRadiusBottomStart="10dp"
                    android:background="@drawable/txtbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#ACACAC">

                    <EditText
                        android:background="@android:color/transparent"
                        android:id="@+id/et_username"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:hint="@string/write_email"
                        android:inputType="textEmailAddress"
                        android:textSize="13sp"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal"
                android:paddingEnd="30dp"
                android:paddingStart="30dp">

                <android.support.design.widget.TextInputLayout
                    android:gravity="center"
                    app:hintEnabled="false"
                    android:layout_marginTop="4dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    android:background="@drawable/txtbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#ACACAC">

                    <EditText
                        android:layout_gravity="center_vertical"
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:background="@android:color/transparent"
                        android:hint="@string/write_pwd"
                        android:inputType="textPassword"
                        android:textSize="13sp"
                        android:singleLine="true"
                        />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="16dp"
                android:layout_height="wrap_content"
                android:gravity="center">


                <Button
                    android:visibility="visible"
                    android:id="@+id/bt_go"
                    android:layout_width="310dp"
                    android:layout_height="45dp"
                    android:background="@drawable/btn_login"
                    android:stateListAnimator="@drawable/state_list_animator_z"
                    ></Button>
            </LinearLayout>

            <RelativeLayout
                android:layout_marginTop="7dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="45dp"
                    android:layout_width="115dp"
                    android:layout_height="24dp"
                    android:id="@+id/autoCheck"
                    android:button="@drawable/checkbox"
                    />

                <TextView
                    android:visibility="gone"
                    android:id="@+id/bt_forgot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:text="@string/forgot_password" />

                <Button
                    android:layout_marginEnd="45dp"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/join"
                    android:layout_width="80dp"
                    android:layout_height="24dp"
                    android:id="@+id/bt_register"
                    />


            </RelativeLayout>


            <LinearLayout
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


            </LinearLayout>

        </LinearLayout>

    <fr.castorflex.android.circularprogressbar.CircularProgressBar
        android:id="@+id/progress_circular"
        android:visibility="invisible"
        android:indeterminate="true"
        android:layout_centerInParent="true"
        android:indeterminateOnly="false"
        android:layout_width="50dp"
        android:layout_height="50dp" />

</RelativeLayout>