<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/main_login01"
    android:id="@+id/bg_login"
    >

    <TextView
        android:text="BeanQ 출석관리 시스템"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/cardView_login"
        android:layout_alignStart="@+id/cardView_login"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="5dp"
        />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_above="@+id/cardView_login"
        android:layout_alignEnd="@+id/cardView_login"
        android:layout_marginBottom="-6dp"
        android:src="@drawable/beanq_cut" />


    <android.support.v7.widget.CardView
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:cardCornerRadius="8dp"
        android:elevation="3dp"

        android:layout_centerInParent="true"
        android:id="@+id/cardView_login"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp">

                <View
                    android:layout_width="8dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:background="@color/mainColor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="50dp"
                    android:text="@string/login_title"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:paddingEnd="30dp"
                android:paddingStart="50dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#c5c5c5">

                    <EditText
                        android:id="@+id/et_username"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:background="@drawable/selector_bg_edit"
                        android:hint="e-mail"
                        android:inputType="textPersonName"
                        android:paddingBottom="2dp"
                        android:textColor="#2fa881"
                        android:textCursorDrawable="@drawable/bg_input_cursor"
                        android:textSize="13sp"
                        android:singleLine="true"
                        />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:paddingEnd="30dp"
                android:paddingStart="50dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#c5c5c5">

                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:background="@drawable/selector_bg_edit"
                        android:hint="password"
                        android:inputType="textPassword"
                        android:paddingBottom="2dp"
                        android:textColor="#2fa881"
                        android:textCursorDrawable="@drawable/bg_input_cursor"
                        android:textSize="13sp"
                        android:singleLine="true"
                        />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:weightSum="0"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                \
                <CheckBox
                    android:id="@+id/emailCheckBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="E-mail 저장"
                    android:textSize="20sp"
                    android:textColor="#2fa881"
                    android:scaleX="0.50"
                    android:scaleY="0.50"
                    android:layout_weight="1"
                    />
                <CheckBox
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/autoCheck"
                    android:scaleX="0.50"
                    android:scaleY="0.50"
                    android:text="자동 로그인"
                    android:textSize="20sp"
                    android:textColor="#2fa881"
                    android:layout_weight="1"
                    />


            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:layout_height="60dp"

                android:gravity="center">

                <Button
                    android:id="@+id/bt_go"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:background="@drawable/bt_shape"
                    android:backgroundTint="@color/mainColor"
                    android:stateListAnimator="@drawable/state_list_animator_z"
                    android:text="@string/login_button"
                    android:textColor="@color/white"></Button>
            </RelativeLayout>

            <TextView
                android:id="@+id/bt_forgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:clickable="true"
                android:text="@string/forgot_password"
                android:textColor="#9a9a9a"
                android:textSize="12sp" />
        </LinearLayout>

    </android.support.v7.widget.CardView>


    <android.support.design.widget.FloatingActionButton
        android:src="@drawable/ic_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fabSize="normal"
        android:id="@+id/bt_register"
        android:transitionName="loginFab"
        android:layout_alignTop="@+id/cardView_login"
        android:layout_marginTop="25dp"
        android:layout_alignEnd="@id/cardView_login"
        android:layout_marginEnd="-20dp"

        />


</RelativeLayout>